@@ -20,7 +20,7 @@ For Linux you will also need to do the steps from the [Linux instructions](linux
 
 Probably the same, for the run configuration the important part is the VM options:
 
-`--module-path="${JAVAFX_HOME}\lib" --add-modules=javafx.controls,javafx.fxml --add-exports javafx.controls/com.sun.javafx.scene.control.skin.resources=ALL-UNNAMED --add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED`
+`--module-path="${JAVAFX_HOME}\lib" --add-modules=javafx.controls,javafx.fxml`
 
 Adding the `skipfilecheck` command line argument ensures that you can debug while having the installed version running at the same time
 (otherwise starting in the IDE will open the installed version).
